--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@mdx-js/react": "^3.0.0",
     "@octokit/rest": "^21.1.1",
     "@siemens/ix-icons": "^3.0.0",
+    "@siemens/ix-react": "^3.0.0",
+    "@siemens/ix": "^3.0.0",
     "@stackblitz/sdk": "^1.11.0",
     "adm-zip": "^0.5.16",
     "inquirer": "^12.6.1",
     "node-fetch": "^3.3.2",
     "prism-react-renderer": "^2.3.0",
     "prismjs": "^1.30.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react": "^18.0.0"
   },
   "devDependencies": {
     "@cmfcmf/docusaurus-search-local": "^1.2.0",
@@ -59,7 +61,8 @@
     "tar": "^7.4.3",
     "tsx": "^4.15.4",
     "typedoc": "^0.27.9",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "unist-util-visit": "^5.0.0"
   },
   "browserslist": {
     "production": [
