--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "pnpm build.docs && docusaurus start",
-    "build": "pnpm build.docs && docusaurus build",
-    "build.docs": "tsx --tsconfig ./tsconfig.node.json ./scripts/prepare-markdown.ts",
+    "start": "pnpm prepare.docs && docusaurus start",
+    "build": "pnpm prepare.docs && docusaurus build",
+    "start.docs": "docusaurus start",
+    "build.docs": "docusaurus build",
+    "prepare.docs": "tsx --tsconfig ./tsconfig.node.json ./scripts/prepare-markdown.ts",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
