--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -29,14 +29,14 @@ jobs:
         run: pnpm build
         env:
           FIGMA_API_TOKEN: ${{ secrets.FIGMA_API_TOKEN }}
-          CSC: ${{ secrets.READ_CSC_TOKEN }}
+          CSC: ${{ secrets.CSC }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish
         id: publish
         uses: netlify/actions/cli@375963b92b795c7b979927c580dd6f2a65ebcf28
         with:
-          args: deploy --message pr-preview-${{ github.event.pull_request.number }} --filter documentation --alias pr-preview-${{ github.event.pull_request.number }}
+          args: deploy --message pr-preview-${{ github.event.pull_request.number }} --alias pr-preview-${{ github.event.pull_request.number }}
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
