--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,45 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    outputs:
-      core_any_changed: ${{ steps.changes.outputs.core_any_changed }}
-      core_all_changed_files: ${{ steps.changes.outputs.core_all_changed_files }}
-      aggrid_any_changed: ${{ steps.changes.outputs.aggrid_any_changed }}
-      echarts_any_changed: ${{ steps.changes.outputs.echarts_any_changed }}
-      docs_any_changed: ${{ steps.changes.outputs.docs_any_changed }}
-      unittests_any_changed: ${{ steps.changes.outputs.unittests_any_changed }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Track changes between commits
-        id: changes
-        uses: tj-actions/changed-files@2f7c5bfce28377bc069a65ba478de0a74aa0ca32
-        with:
-          files_yaml: |
-            core:
-              - packages/core/**
-            aggrid:
-              - packages/aggrid/**
-            echarts:
-              - packages/echarts/**
-            docs:
-              - packages/documentation/**
-              - packages/example-styles/**
-              - packages/html-test-app/**
-              - packages/angular-test-app/**
-              - packages/react-test-app/**
-              - packages/vue-test-app/**
-            unittests:
-              - packages/core/**
-              - packages/angular/**
-              - packages/react/**
-              - packages/angular-test-app/**
-              - packages/react-test-app/**
-              - packages/figma-plugin/**
-
   build:
-    needs: changes
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -61,155 +23,4 @@ jobs:
       - uses: ./.github/workflows/actions/turbo
 
       - name: Build
-        run: pnpm build --cache-dir=.turbo --filter \!documentation
-
-      - name: Lint
-        run: pnpm lint
-
-      - name: Check for local development changes
-        run: ./scripts/lint-build.sh
-
-  build-docs:
-    needs: [changes, build]
-    if: ${{ needs.changes.outputs.docs_any_changed == 'true' || github.event.pull_request.user.login == 'renovate[bot]' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Build
-        run: pnpm build --cache-dir=.turbo --filter documentation
-
-  visual-testing-core:
-    if: ${{ needs.changes.outputs.core_any_changed == 'true' || github.event.pull_request.user.login == 'renovate[bot]' }}
-    needs: [build, changes]
-    timeout-minutes: 10
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        shardIndex: [1, 2, 3, 4]
-        shardTotal: [4]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install chromium --with-deps
-
-      - name: Visual Regression
-        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix -- --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: core-blob-report-${{ matrix.shardIndex }}
-          path: |
-            ./packages/core/blob-report/
-          retention-days: 1
-
-  merge-core-reports:
-    if: failure()
-    needs: [visual-testing-core]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Download blob reports from GitHub Actions Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: all-blob-reports
-          pattern: core-blob-report-*
-          merge-multiple: true
-
-      - name: Merge into HTML Report
-        run: pnpm exec playwright merge-reports --reporter html ./all-blob-reports
-
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v4
-        with:
-          name: core-html-report--attempt-${{ github.run_attempt }}
-          path: playwright-report
-          retention-days: 14
-
-  visual-testing-aggrid:
-    if: ${{ needs.changes.outputs.core_any_changed == 'true' || needs.changes.outputs.aggrid_any_changed == 'true' || github.event.pull_request.user.login == 'renovate[bot]' }}
-    needs: [build, changes]
-    timeout-minutes: 10
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install chromium --with-deps
-
-      - name: Visual Regression
-        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix-aggrid
-
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: aggrid-html-report--attempt-${{ github.run_attempt }}
-          path: |
-            ./packages/aggrid/playwright-report/
-          retention-days: 1
-
-  visual-testing-echarts:
-    if: ${{ needs.changes.outputs.core_any_changed == 'true' || needs.changes.outputs.echarts_any_changed == 'true' || github.event.pull_request.user.login == 'renovate[bot]' }}
-    needs: [build, changes]
-    timeout-minutes: 10
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install chromium --with-deps
-
-      - name: Visual Regression
-        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix-echarts
-
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: echarts-html-report--attempt-${{ github.run_attempt }}
-          path: |
-            ./packages/echarts/playwright-report/
-          retention-days: 1
-
-  unit:
-    if: ${{ needs.changes.outputs.unittests_any_changed == 'true' || github.event.pull_request.user.login == 'renovate[bot]' }}
-    needs: [build, changes]
-    timeout-minutes: 10
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install chromium --with-deps
-
-      - name: Build
-        run: pnpm run build --cache-dir=.turbo --filter !\documentation
-
-      - name: Test
-        run: pnpm run test --cache-dir=.turbo --filter !\documentation
-
-  unit-memlab:
-    if: ${{ needs.changes.outputs.unittests_any_changed == 'true' }}
-    needs: [build, changes]
-    timeout-minutes: 10
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/actions/turbo
-
-      - name: Test
-        run: |
-          cd testing/performance-memlab
-          pnpm dlx puppeteer browsers install chrome@127.0.6533.88
-          pnpm test.memlab
+        run: pnpm build
