--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,13 +14,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  runs-on: ubuntu-latest
+  permissions:
+    contents: read
+    issues: read
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - uses: ./.github/workflows/actions/turbo
+    - uses: ./.github/workflows/actions/turbo
 
-      - name: Build
-        run: pnpm build
+    - name: Build
+      run: pnpm build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        FIGMA_API_TOKEN: ${{ secrets.FIGMA_API_TOKEN }}
+        CSC: ${{ secrets.CSC }}
