fix cheerio release

--- a/package.json
+++ b/package.json
@@ -81,5 +81,10 @@
   "engines": {
     "node": ">=18.0"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.10.0",
+  "pnpm": {
+    "overrides": {
+      "cheerio": "1.0.0-rc.12"
+    }
+  }
 }
