--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,6 +1,9 @@
 name: Deploy GitHub Page (prod)
 
 on:
+  push:
+    branches:
+      - 'init'
   workflow_dispatch:
     inputs:
       confirm_deployment:
@@ -12,7 +15,7 @@ concurrency: deploy-gh-pages-${{ github.ref }}
 
 jobs:
   deploy-gh-pages:
-    if: ${{ inputs.confirm_deployment == true && github.repository == 'siemens/ix-docs' && startsWith(github.ref, 'refs/heads/release/docs') == true }}
+    if: ${{ inputs.confirm_deployment == true && github.repository == 'siemens/ix-docs' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -28,6 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FIGMA_API_TOKEN: ${{ secrets.FIGMA_API_TOKEN }}
           CSC: ${{ secrets.CSC }}
+          BRAND_URL: ${{ vars.BRAND_URL }}
 
       - name: Deploy GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8
