--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -29,9 +29,10 @@ jobs:
       - name: Build
         run: pnpm build
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FIGMA_API_TOKEN: ${{ secrets.FIGMA_API_TOKEN }}
           CSC: ${{ secrets.CSC }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRAND_URL: ${{ vars.BRAND_URL }}
 
       - name: Publish
         id: publish
