--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 DOCS_BRANCH='main'
 DOCS_BRANCH_TYPE='pull request' # Check if the branch is a pull request
 DOCS_PR_NUMBER='1883'
+BASE_URL=/ix-docs/
