ci: remove dev branch reference

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,9 +1,6 @@
 name: Deploy GitHub Page (prod)
 
 on:
-  push:
-    branches:
-      - 'init'
   workflow_dispatch:
     inputs:
       confirm_deployment:
@@ -15,7 +12,7 @@ concurrency: deploy-gh-pages-${{ github.ref }}
 
 jobs:
   deploy-gh-pages:
-    # if: ${{ inputs.confirm_deployment == true && github.repository == 'siemens/ix-docs' }}
+    if: ${{ inputs.confirm_deployment == true && github.repository == 'siemens/ix-docs' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
