--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,6 @@ updates:
     directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+    ignore:
+      - paths:
+          - '/static/demo/v2/code-runtime/**' # Will be removed after code-runtime is tested
