--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "@docusaurus/plugin-client-redirects": "^3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
+    "@siemens/ix": "^3.0.0",
     "@siemens/ix-icons": "^3.0.0",
     "@siemens/ix-react": "^3.0.0",
-    "@siemens/ix": "^3.0.0",
     "@stackblitz/sdk": "^1.11.0",
     "adm-zip": "^0.5.16",
     "inquirer": "^12.6.1",
     "node-fetch": "^3.3.2",
     "prism-react-renderer": "^2.3.0",
     "prismjs": "^1.30.0",
-    "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@cmfcmf/docusaurus-search-local": "^1.2.0",
