--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   # Skip builds for branches starting with dependabot/
-  ignore = "if [[ $BRANCH == dependabot/* ]]; then echo "1"; else echo "0"; fi"
+  ignore = "if [[ $BRANCH == dependabot/* ]]; then exit 0; else exit 1; fi"
