docs: use release-4.0.0 as target branch

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-DOCS_BRANCH='main'
+DOCS_BRANCH='release-4.0.0'
 DOCS_BRANCH_TYPE='branch' # Check if the branch is a pull request
 DOCS_PR_NUMBER=''
