add angular standalone runtime

--- a/static/runtime/v4/angular-standalone/package.json
+++ b/static/runtime/v4/angular-standalone/package.json
@@ -26,6 +26,15 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@siemens/ix-angular": "<VERSION>",
+    "@siemens/ix-aggrid": "<VERSION>",
+    "@siemens/ix-echarts": "<VERSION>",
+    "@siemens/ix-icons": "latest",
+    "ag-grid-angular": "^32.0.2",
+    "ag-grid-community": "^32.0.2",
+    "echarts": "6.0.0",
+    "echarts-gl": "^2.0.9",
+    "ngx-echarts": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
