--- a/static/runtime/v4/angular-standalone/tsconfig.app.json
+++ b/static/runtime/v4/angular-standalone/tsconfig.app.json
@@ -6,10 +6,5 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/**/*.spec.ts"
-  ]
+  "include": ["src"]
 }
