--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@docusaurus/plugin-client-redirects": "^3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
-    "@siemens/ix": "^3.0.0",
+    "@siemens/ix": "~3.2.0",
     "@siemens/ix-icons": "^3.0.0",
     "@siemens/ix-react": "^3.0.0",
     "@stackblitz/sdk": "^1.11.0",
