add external data

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -11,3 +11,10 @@ felixleist:
   image_url: https://github.com/flxlst09.png
   socials:
     github: flxlst09
+
+kathrinschalber:
+  name: Kathrin Schalber
+  title: Product Owner & UX Designer of Siemens Industrial Experience
+  image_url: https://github.com/kathrinschalber.png
+  socials:
+    github: kathrinschalber
