--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-DOCS_BRANCH='main'
+DOCS_BRANCH='@siemens/ix@3.2.0'
 DOCS_BRANCH_TYPE='branch' # Check if the branch is a pull request
 DOCS_PR_NUMBER=''
