--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 DOCS_BRANCH='main'
 DOCS_BRANCH_TYPE='branch' # Check if the branch is a pull request
 DOCS_PR_NUMBER=''
-BRAND_VERSION=0.0.0-snapshot-20251007091444
+BRAND_VERSION=1.0.0
