--- a/static/runtime/v4/react/package.json
+++ b/static/runtime/v4/react/package.json
@@ -16,16 +16,16 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.1",
     "echarts": "^5.5.1",
-    "echarts-for-react": "~3.0.2",
+    "echarts-for-react": "^3.0.2",
     "echarts-gl": "^2.0.9",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-react": "<VERSION>",
     "@siemens/ix-aggrid": "<VERSION>",
-    "@siemens/ix-echarts": "<VERSION>",
+    "@siemens/ix-echarts": "latest",
     "@siemens/ix-icons": "latest"
   }
 }
