--- a/static/runtime/v4/vue/package.json
+++ b/static/runtime/v4/vue/package.json
@@ -12,7 +12,7 @@
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-vue": "<VERSION>",
     "@siemens/ix-aggrid": "<VERSION>",
-    "@siemens/ix-echarts": "<VERSION>",
+    "@siemens/ix-echarts": "latest",
     "@siemens/ix-icons": "latest",
     "ag-grid-community": "^30.2.0",
     "ag-grid-vue3": "^30.1.0",
