--- a/static/runtime/angular-standalone/package.json
+++ b/static/runtime/angular-standalone/package.json
@@ -29,10 +29,10 @@
     "@angular/router": "^20.1.0",
     "@siemens/ix-angular": "<VERSION>",
     "@siemens/ix-aggrid": "<VERSION>",
-    "@siemens/ix-echarts": "<VERSION>",
+    "@siemens/ix-echarts": "latest",
     "@siemens/ix-icons": "latest",
-    "ag-grid-angular": "^32.0.2",
-    "ag-grid-community": "^32.0.2",
+    "ag-grid-angular": "^33.0.0",
+    "ag-grid-community": "^33.0.0",
     "echarts": "^5.3.3",
     "echarts-gl": "^2.0.9",
     "ngx-echarts": "^20.0.1",
