--- a/static/runtime/angular/package.json
+++ b/static/runtime/angular/package.json
@@ -18,10 +18,10 @@
     "@siemens/ix": "<VERSION>",
     "@siemens/ix-angular": "<VERSION>",
     "@siemens/ix-aggrid": "<VERSION>",
-    "@siemens/ix-echarts": "<VERSION>",
+    "@siemens/ix-echarts": "latest",
     "@siemens/ix-icons": "latest",
-    "ag-grid-angular": "^32.0.2",
-    "ag-grid-community": "^32.0.2",
+    "ag-grid-angular": "^33.0.0",
+    "ag-grid-community": "^33.0.0",
     "echarts": "5.4.3",
     "echarts-gl": "^2.0.9",
     "ngx-echarts": "^18.0.0",
