fix: resolve brand theme not showing in eCharts IX-3736 (#147)
Co-authored-by: Daniel Leroux <daniel.leroux@siemens.com>

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@docusaurus/plugin-client-redirects": "^3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
-    "@siemens/ix": "0.0.0-pr-2198-20251023082407",
+    "@siemens/ix": "^4.2.0",
     "@siemens/ix-icons": "^3.2.0",
-    "@siemens/ix-react": "0.0.0-pr-2198-20251023082407",
+    "@siemens/ix-react": "^4.2.0",
     "@stackblitz/sdk": "^1.11.0",
     "prism-react-renderer": "^2.3.0",
     "prismjs": "^1.30.0",
