--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DOCS_BRANCH='main'
+DOCS_BRANCH='@siemens/ix@4.2.0'
 DOCS_BRANCH_TYPE='branch' # Check if the branch is a pull request
 DOCS_PR_NUMBER=''
 BRAND_VERSION=1.0.0
