--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DOCS_BRANCH='@siemens/ix@4.3.0'
+DOCS_BRANCH='main'
 DOCS_BRANCH_TYPE='branch' # Check if the branch is a pull request
 DOCS_PR_NUMBER=''
 
