--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "10.4.21",
     "axios": "^1.5.0",
     "clsx": "^2.1.0",
+    "docusaurus-plugin-llms": "^0.3.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "fs-extra": "^11.3.0",
     "glob": "^11.0.3",
